[package]
name = "pumpbin"
version = "0.2.1"
authors = ["b1n <b1n@b1n.io>"]
edition = "2021"
description = "PumpBin is an Implant Generation Platform."
documentation = "https://pumpbin.b1n.io"
readme = "README.md"
homepage = "https://b1n.io"
repository = "https://github.com/pumpbin/pumpbin"
license = "MIT"
build = "build.rs"
default-run = "pumpbin"

[[bin]]
name = "maker"
path = "src/bin/maker.rs"

[dependencies]
rfd = { version = "0.14.1", default-features = false , features = ["gtk3"]}
dirs = "5.0.1"
flatbuffers = "24.3.25"
open = "5.1.4"
bincode = { version = "2.0.0-rc.3", default-features = false , features = ["alloc", "derive", "std"]}
anyhow = "1.0.86"
rand = "0.8.5"
memchr = "2.7.4"
aes-gcm = "0.10.3"
tokio = { version = "1.38.0", default-features = false , features = ["time"]}

[dependencies.iced]
version = "0.13.0-dev"
git = "https://github.com/iced-rs/iced"
rev = "6c1027af8d54ad21e282337b53097eb196d62c00"
default-features = false
features = ["advanced", "svg", "tokio", "wgpu", "image"]

[package.metadata.winresource]
LegalCopyright = "Copyright (c) 2024 b1n <b1n@b1n.io>"

[target."cfg(windows)".build-dependencies]
winresource = "0.1.17"

[dev-dependencies]
tempfile = "3.10.1"

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
