[package]
name = "pumpbin"
version = "1.1.1"
authors = ["b1n <b1n@b1n.io>"]
edition = "2021"
description = "PumpBin is an Implant Generation Platform."
documentation = "https://pumpbin.b1n.io"
readme = "README.md"
homepage = "https://b1n.io"
repository = "https://github.com/pumpbin/pumpbin"
license = "MIT"
build = "build.rs"
default-run = "pumpbin"

[[bin]]
name = "maker"
path = "src/bin/maker.rs"

[dependencies]
rfd = { version = "0.14.1", default-features = false , features = ["gtk3"]}
dirs = "5.0.1"
open = "5.1.4"
bincode = { version = "2.0.0-rc.3", default-features = false , features = ["alloc", "derive", "std"]}
anyhow = "1.0.86"
rand = "0.8.5"
memchr = "2.7.4"
capnp = "0.19"
extism = "1.4.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
flate2 = "1.0.30"

[dependencies.iced]
version = "0.13.0-dev"
git = "https://github.com/iced-rs/iced"
rev = "143f4c86caeb43cfff6573fe192c8eb877bb044c"
default-features = false
features = ["wgpu", "tiny-skia", "advanced", "svg", "tokio", "image"]

[package.metadata.winresource]
LegalCopyright = "Copyright (c) 2024 b1n <b1n@b1n.io>"

[target."cfg(windows)".build-dependencies]
winresource = "0.1.17"

[dev-dependencies]
tempfile = "3.10.1"

[build-dependencies]
capnpc = "0.19"

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
